# ccsh

./: .gitignore  CMakeLists.txt
cc/: ccsh_compiler.cpp
include/ccsh/: ccsh_command.hpp  ccsh_utils.hpp  ccsh_wrappers.hpp
include/ccsh/simpleopt/: SimpleGlob.h
lib/: ccsh_command.cpp  ccsh_command_posix.cpp  ccsh_command_windows.cpp  ccsh_internals.hpp  ccsh_internals_windows.hpp  ccsh_operators.cpp  ccsh_utils.cpp  ccsh_utils_posix.cpp  ccsh_utils_windows.cpp
lib/builtins/: cd.cpp
sample/: main.cpp
test/: CMakeLists.txt  test_builtin.cpp  test_env_var.cpp  test_windows_fix.cpp
